fix: Fix extra spacing on menu header

--- a/menu-app/src/app/menu/menu.component.scss
+++ b/menu-app/src/app/menu/menu.component.scss
@@ -1,14 +1,15 @@
 .rectangle{
   min-height: 100vh;
-  margin-top: 0;
+  margin-left: 1em;
 }
 
 .head{
   background: #ffffff;
   box-shadow: 0 1.5px 6px 0 rgba(0, 0, 0, 0.08);
-  position: sticky;
+  position: sticky ;
   top: 0;
-  margin-top: 0;
+  width: 100%;
+  overflow: hidden;
 }
 
 h1{
@@ -36,7 +37,4 @@ h1{
   }
 }
 
-.horizontal {
-  display: flex;
-  justify-content: space-between;
-}
+
